fix: fix z-index for extras installation info

--- a/assets/modules/store/css/style.css
+++ b/assets/modules/store/css/style.css
@@ -92,6 +92,7 @@ body {
 }
 
 .informer {
+  z-index: 1;
   position: absolute;
   top: 0;
   left: 0;
